FRONTEND-ISU/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;600;700&display=swap');

body {
  font-family: 'Instrument Sans', sans-serif;
}

html,
body,
#root {
  width: 100%;
  min-height: 100vh;
  margin: 0;
  padding: 0;
}

body {
  display: block;
}

